[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Flashlight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Audio/Switch_Sound.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/Footstep.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape" id=1]
radius = 0.75
height = 2.25

[node name="Player" type="KinematicBody"]
collision_layer = 3
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="LookPivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4, 0 )

[node name="Camera" type="Camera" parent="LookPivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0.2 )
cull_mask = 1
current = true
fov = 75.0
far = 250.0

[node name="SpotLight" type="SpotLight" parent="LookPivot"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
light_color = Color( 1, 0.784314, 0.784314, 1 )
spot_range = 75.0

[node name="Flashlight" parent="LookPivot" instance=ExtResource( 2 )]
transform = Transform( 0.997564, 0, 0.0697565, 0, 1, 0, -0.0697565, 0, 0.997564, -0.82, -0.66, 0.9 )

[node name="SwitchSound" type="AudioStreamPlayer" parent="LookPivot"]
stream = ExtResource( 3 )
volume_db = 8.0

[node name="FootstepAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -6.0
pitch_scale = 0.5

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[connection signal="timeout" from="FootstepTimer" to="." method="play_footstep"]
